Display addition question to the user

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
    "files.autoSave": "off",
    "workbench.colorTheme": "Tomorrow Night Blue",
    "terminal.integrated.gpuAcceleration": "canvas",
-   "editor.defaultFormatter": "HookyQR.beautify"
+"editor.defaultFormatter": "HookyQR.beautify",
+"editor.bracketPairColorization.independentColorPoolPerBracketType": false
 }
